apps/gitlist/gitlist-dp.yml
apiVersion: apps/v1beta2 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: gitlist
  namespace: balhau-dev
  labels:
    version: 0.0.9
    app: gitlist
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitlist
  template:
    metadata:
      labels:
        app: gitlist
    spec:
      containers:
      - name: gitlist
        image: 10.108.252.69:5000/balhau/gitlist:armv6-0.0.9
        volumeMounts:
        - name: gitlist-app-store
          mountPath: /app
        - name: gitlist-git-store
          mountPath: /git
        ports:
        - containerPort: 80
          name: registry
          protocol: TCP
      volumes:
      - name: gitlist-app-store
        persistentVolumeClaim:
          claimName: gitlist-app-pvc
      - name: gitlist-git-store
        persistentVolumeClaim:
          claimName: gitlist-git-pvc
