apps/gitlist/gitlist-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitlist-ingress
  namespace: balhau-dev
spec:
  tls:
  - hosts:
    - git.balhau.net
  rules:
  - host: git.balhau.net
    http:
      paths:
      - path: /
        backend:
          serviceName: gitlist
          servicePort: 80
